resources/css/default.css
:root {
    --dark-blue: hsl(233, 26%, 24%);
    --lime-green: hsl(136, 65%, 51%);
    --bright-cyan: hsl(192, 70%, 51%);
    --grayish-blue: hsl(233, 8%, 62%);
    --light-grayis-blue: hsl(220, 16%, 96%);
    --very-light-gray: hsl(0, 0%, 98%);
    --white: hsl(0, 0%, 100%);
}

* {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

html {
    height: 100%;
    font-family: 'Public Sans', sans-serif;
    font-size: 112.5%; /* 18px */
    background-color: var(--very-light-gray);
}

body {
    font-weight: 400;
    width: 100%;
    min-height: 100%;
    position: relative;
}

img {
    max-width: 100%;
}

h1, h2, h3, h4, h5 {
    font-family: 'Public Sans', sans-serif;
    font-weight: 300;
    line-height: 1.15;
    color: var(--dark-blue);
}

h1 {
    margin-top: 0;
    font-size: 2.488em;
}

h2 {
    font-size: 2.074em;
}

h3 {
    font-size: 1.728em;
}

h4 {
    font-size: 1.44em;
}

h5 {
    font-size: 1.2em;
}

.container {
    display: grid;
}

.header {
    position: fixed;
    width: 100%;
    z-index: 1000;
    background-color: var(--white);
}

.header__nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 1rem;
}

.header__links {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.header__link {
    color: var(--grayish-blue);
    font-size: 14px;
    font-weight: 700;
    margin-left: 1em;
}

.button {
    font-size: 0.75rem;
    font-weight: 700;
    padding: 0.9em 2.5em;
    color: var(--white);
    background: linear-gradient(45deg, var(--lime-green), var(--bright-cyan));
    border-radius: 4em;
    border: none;
}

.content {
    padding-top: 77px;
}

.hero {
    display: grid;
    grid-template-columns: [l] 8em [m] 1fr [max] 8em;
    padding: 9em 0;
    position: relative;
    background-image: url(../images/bg-intro-desktop.svg);
    background-repeat: no-repeat;
    background-position: 600px -300px;
}

.hero__content {
    width: 40%;
    grid-column: m / 2;
}

.hero__title {
    margin-bottom: 1.75rem;
}

.hero__slogan {
    line-height: 1.5;
    color: var(--grayish-blue);
    margin-bottom: 1.75rem;
}

.hero__image {
    position: absolute;
    top: -30%;
    right: -9%;
}

